@@ -37,10 +37,13 @@
 
 int writeArea(FILE *f, s_area *area, char type) {
 
-   if (area->group == NULL) area->group = "0";
+   if (area->group == NULL) {
+      area->group = malloc(1);
+      *(area->group) = '\0';
+   }
 
    fprintf(f, "areadef %s \"%s\" %s ", area->areaName,
-             (area->description!=NULL) ? area->description : area->areaName, strUpper(area->group));
+             (area->description!=NULL) ? area->description : area->areaName, area->group);
 
    switch (type) {
      case 0: fprintf(f, "echo ");
